PROD-9-26-19/force-app/main/default/objects/External_Database_Contacts__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>from Preqin</description>
    <inlineHelpText>from Preqin</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>