PROD-9-26-19/force-app/main/default/objects/External_Database_Contacts__c/fields/External_Database_Account__c.field-meta.xml
<CustomField>
    <fullName>External_Database_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>from Preqin</description>
    <label>External Database Account</label>
    <referenceTo>External_Database_Account__c</referenceTo>
    <relationshipLabel>External Database Contacts</relationshipLabel>
    <relationshipName>External_Database_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>