PROD-9-26-19/force-app/main/default/objects/External_Database_Contacts__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>from Preqin</description>
    <inlineHelpText>from Preqin</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>