PROD-9-26-19/force-app/main/default/objects/External_Database_Contacts__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>from Preqin</description>
    <inlineHelpText>from Preqin</inlineHelpText>
    <label>Salutation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>