PROD-9-26-19/force-app/main/default/objects/External_Database_Contacts__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>from Preqin</description>
    <inlineHelpText>from Preqin</inlineHelpText>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>