PROD-9-26-19/force-app/main/default/objects/External_Database_Contacts__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>from Preqin</description>
    <inlineHelpText>from Preqin</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Private Sector Pension Fund</fullName>
            </value>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>Sovereign Wealth Fund</fullName>
            </value>
            <value>
                <fullName>Wealth Manager</fullName>
            </value>
            <value>
                <fullName>Family Office - Multi</fullName>
            </value>
            <value>
                <fullName>Family Office - Single</fullName>
            </value>
            <value>
                <fullName>Real Assets Fund of Funds Manager</fullName>
            </value>
            <value>
                <fullName>Real Estate Fund of Funds Manager</fullName>
            </value>
            <value>
                <fullName>Private Equity Fund of Funds Manager</fullName>
            </value>
            <value>
                <fullName>Corporate Investor</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Investment Company</fullName>
            </value>
            <value>
                <fullName>Endowment Plan</fullName>
            </value>
            <value>
                <fullName>Public Pension Fund</fullName>
            </value>
            <value>
                <fullName>Secondary Fund of Funds Manager</fullName>
            </value>
            <value>
                <fullName>Investment Bank</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Superannuation Scheme</fullName>
            </value>
            <value>
                <fullName>Real Estate Firm (Investor)</fullName>
            </value>
            <value>
                <fullName>Government Agency</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Investment Trust</fullName>
            </value>
            <value>
                <fullName>Secondary Real Estate</fullName>
            </value>
            <value>
                <fullName>Private Equity Firm (Investor)</fullName>
            </value>
            <value>
                <fullName>Hybrid Fund of Funds Manager</fullName>
            </value>
            <value>
                <fullName>Infrastructure Fund of Funds Manager</fullName>
            </value>
            <value>
                <fullName>Listed Fund of Funds Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>